# Where-does-CoT-peaks-

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Feedback.md  README.md  conclusion.md  experiment_spec.md  feedbacks.md  gpu_porting_bundle.py  pipeline.py  pyproject.toml  smokerun-1019
.agents/: previous-exp.md  ref.md  stage1-spec.md
configs/: stage1.yaml  stage1_overall.yaml  stage1_per_question.yaml  stage1_prontoqa.yaml  targeted_rerun_short_long_relaxed.yaml
data/: gsm8k_sample.json
jobs/: analysis_phase.pbs  c12.pbs  convert_legacy_full_generation_cpu.pbs  dedup_run.pbs  env_test.pbs  generate.pbs  generate_per_question.pbs  generate_prontoqa.pbs  generate_smoke.pbs  nldd.pbs  nldd_measure.pbs  overall_phase2_compact.pbs  per_question_analysis_phase.pbs  per_question_compact_phase1.pbs  per_question_data_phase.pbs  pilot.pbs  postprocess_cpu.pbs  prepare_subset.pbs  profile_prontoqa_difficulty.pbs  prontoqa_data_phase.pbs  rebuild_overall_data_phase.pbs  rebuild_per_question_data_phase.pbs  regenerate_corruptions.pbs  submit_generate_per_question.sh  submit_generate_per_question_repair.sh  submit_generate_prontoqa.sh  submit_generate_remaining_shards.sh  submit_generate_shards.sh  targeted_rerun_gen.pbs  targeted_rerun_process.pbs  validate_data_phase.pbs
prompts/: _deprecated_len_guided_v1.yaml  icl_detailed.yaml  icl_medium.yaml  icl_minimal.yaml  icl_short.yaml  icl_verbose.yaml  len_guided_v1.yaml  nldd_eval_v1.yaml
results/folio-pilot/: pyproject.toml
scripts/: build_per_question_manifest.py  build_per_question_repair.py  dedupe_run.py  (+37 more)
(+202 files in other folders)
